--- a/Task1/Task1.html
+++ b/Task1/Task1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Task1.css">
 </head>
 
 <body>
@@ -57,5 +57,5 @@
         &copy; 2024 My Portfolio. All rights reserved.
     </footer>
 
-    <script src="main.js"></script>
+    <script src="Task1.js"></script>
 </body>
