--- a/Task2/task.html
+++ b/Task2/task.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StopWatch Web Application</title>
-    <link rel="stylesheet" href="task2.css">
-    <script defer src="task2.js"></script>
+    <link rel="stylesheet" href="task.css">
+    <script defer src="task.js"></script>
 </head>
 <body>
     <div class="container">
