--- a/Task3/task.html
+++ b/Task3/task.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="task3.css">
+    <link rel="stylesheet" href="task.css">
     <title>tic tac toe</title>
 </head>
 <body>
@@ -25,6 +25,6 @@
     <h2 id="statusText"></h2>
     <button id="restartBtn">play again</button>
 </div>
-    <script src="task3.js"></script>
+    <script src="task.js"></script>
 </body>
 </html>
