--- a/Task4/task.html
+++ b/Task4/task.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio Website</title>
     <!-- CSS Link -->
-    <link rel="stylesheet" href="task4.css">
+    <link rel="stylesheet" href="task.css">
     <!-- Box Icons Link -->
     <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
@@ -208,6 +208,6 @@
  
  
     <!--  JS lINK-->
-    <script src="task4.js"></script>
+    <script src="task.js"></script>
 </body>
 </html>
