--- a/Task4/task.html
+++ b/Task4/task.html
@@ -202,7 +202,7 @@
     </div>
     <!-- Copyright -->
     <div class="copyright">
-        <p>Create By <a href="">Sandhya.</a> | All Right Reserved.</p>
+        <p>Create By <a href="">Salman.</a> | All Right Reserved.</p>
     </div>
  
  
